# webgpu-throwaway

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yaml
assets/shaders/: vertex_shader.wgsl
emscripten/: post-build.sh
src/: application.cpp  application.hpp  camera.cpp  camera.hpp  graphics.cpp  graphics.hpp  main.cpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  resourceManager.cpp  resourceManager.hpp  shaderPipeline.cpp  shaderPipeline.hpp
src/shaders/: cube.cpp  cube.hpp  line3d.cpp  line3d.hpp  line3d.wgsl  rectangle.cpp  rectangle.hpp  rectangle.wgsl
template/: shell.html
